@@ -1,3 +1,10 @@
+2001-08-08  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Recipe.pm: Add support for big "switch" statement when a
+	primitive name is ambiguous. 
+
+	* Inst/Defn.pm (orac_list_generic_observing_modes): Add new routine
+
 2001-08-07  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/CGS4.pm (configure): Add support for .I1BEAM components.
